[gd_scene load_steps=13 format=3 uid="uid://cqec6irfaowvp"]

[ext_resource type="PackedScene" uid="uid://dpqb8ih1u4omf" path="res://Levels/vacant_room.tscn" id="1_tmqq4"]
[ext_resource type="PackedScene" uid="uid://c4q7s0ehyqx0o" path="res://cat/cat.tscn" id="2_ehrsk"]
[ext_resource type="Texture2D" uid="uid://6touatertv61" path="res://Levels/Level_4/level_4_wall.png" id="2_s3rby"]
[ext_resource type="Texture2D" uid="uid://c0nhg0ufpfvqi" path="res://Levels/Level_4/level_4_toilet.png" id="3_5ylwl"]
[ext_resource type="PackedScene" uid="uid://b36bl5hadkdtm" path="res://StringBall/StringBall.tscn" id="3_bf55f"]
[ext_resource type="Script" path="res://Levels/Level_4/WaterBody.gd" id="4_5p5dd"]
[ext_resource type="Texture2D" uid="uid://ww4okg8hxlpx" path="res://Levels/Level_4/level_4_bathtub.png" id="4_6dbbv"]
[ext_resource type="PackedScene" uid="uid://3iyqigiyk7np" path="res://Platform.tscn" id="4_w1kjl"]
[ext_resource type="PackedScene" uid="uid://bn4481xl7jj4g" path="res://GUI/main_control.tscn" id="5_rs18h"]
[ext_resource type="PackedScene" uid="uid://dmrnndjc054qm" path="res://ChaosCore/ChaosCore.tscn" id="6_6r2w2"]
[ext_resource type="PackedScene" uid="uid://bx0knw8nruxex" path="res://Levels/Level_4/Duck.tscn" id="7_ah616"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_lrq5i"]

[node name="Level4" type="Node2D"]

[node name="vacant_room" parent="." instance=ExtResource("1_tmqq4")]

[node name="Level4Wall" type="Sprite2D" parent="."]
position = Vector2(640, 312)
texture = ExtResource("2_s3rby")

[node name="Toilet" type="Sprite2D" parent="."]
position = Vector2(199, 512)
texture = ExtResource("3_5ylwl")

[node name="StaticBody2D" parent="Toilet" instance=ExtResource("4_w1kjl")]
position = Vector2(-2, -23)
scale = Vector2(8.6, 0.48)

[node name="StaticBody2D2" parent="." instance=ExtResource("4_w1kjl")]
position = Vector2(165, 248)
scale = Vector2(13.4, 0.960003)

[node name="Bathbub" type="Sprite2D" parent="."]
position = Vector2(879, 497)
texture = ExtResource("4_6dbbv")

[node name="WaterBody" type="Area2D" parent="Bathbub"]
position = Vector2(2, 10)
scale = Vector2(35.6603, 16.3883)
collision_layer = 32
collision_mask = 266
gravity_point_center = Vector2(0, -1)
gravity_direction = Vector2(0, -1)
gravity = 1200.0
linear_damp_space_override = 1
linear_damp = 2.0
script = ExtResource("4_5p5dd")
metadata/_edit_group_ = true

[node name="Sprite2D" type="Sprite2D" parent="Bathbub/WaterBody"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Bathbub/WaterBody"]
shape = SubResource("RectangleShape2D_lrq5i")

[node name="AirBody" type="Area2D" parent="Bathbub"]
position = Vector2(-9, -179)
scale = Vector2(38.8373, 1.1131)
collision_layer = 64
collision_mask = 0
gravity_space_override = 1
gravity_point_center = Vector2(0, -1)
gravity_direction = Vector2(0, -1)
gravity = 1200.0
linear_damp_space_override = 1
linear_damp = 1.0
angular_damp_space_override = 1
metadata/_edit_group_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="Bathbub/AirBody"]
position = Vector2(0.257484, 13.4759)
shape = SubResource("RectangleShape2D_lrq5i")
debug_color = Color(0.953134, 0, 0.555118, 0.42)

[node name="Cat" parent="." instance=ExtResource("2_ehrsk")]
position = Vector2(201, 580)

[node name="StringBall" parent="." instance=ExtResource("3_bf55f")]
position = Vector2(399, 572)
lock_rotation = true

[node name="main_control" parent="." instance=ExtResource("5_rs18h")]
level_name = "关卡4"
back_type = 2

[node name="ChaosCore" parent="." instance=ExtResource("6_6r2w2")]

[node name="Duck" parent="." instance=ExtResource("7_ah616")]
position = Vector2(911, 89)
lock_rotation = true
linear_damp = 3.0
angular_damp = 5.0

[connection signal="body_entered" from="Bathbub/WaterBody" to="Bathbub/WaterBody" method="_on_body_entered"]
[connection signal="body_exited" from="Bathbub/WaterBody" to="Bathbub/WaterBody" method="_on_body_exited"]
[connection signal="body_shape_entered" from="Bathbub/WaterBody" to="Bathbub/WaterBody" method="_on_body_shape_entered"]
[connection signal="cat_pat_ball" from="Cat" to="main_control" method="_on_cat_cat_pat_ball"]
[connection signal="eat_core" from="Cat" to="main_control" method="_on_cat_eat_core"]
[connection signal="show_chaos_core" from="StringBall" to="ChaosCore" method="_on_string_ball_show_chaos_core"]
